-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.7.0-rc1
-
Windows 10 1803 64 bit
MSVC2015 64 bit
cdb 10.0
-
63034e55ce46959d726b2e1ec827e7dde95729f1
- Run into a breakpoint.
- Switch to instruction-wise operation.
The button changes to pressed state and Creator shows the disassembler.
- Stop the debugger.
Creator shows the codeeditor again. - Let the debugger run into the breakpoint again.
Creator shows the disassembler again, but the button is not in pressed state.
- Click the button.
Creator still shows the disassembler, the button changes to pressed state. - Click the button again.
Creator shows the codeeditor.
When the disassembler is being shown, the button should be in pressed state. Clicking it then should immediately switch to the codeeditor.