Debugger: Fix state of instruction wise operation button

Task-number: QTCREATORBUG-20714
Change-Id: Ie45fcb288a5e6a566a38b35d375b703c9c5a2326
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>